added | added reStructuredText version of README file for it to display on PyPi.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,6 +2,7 @@ include API.md
 include LICENSE
 include NOTICE
 include README.md
+include README.rst
 # include optional-requirements.txt
 include requirements.txt
 # include setup.sh
